fixed error causing button presses to be finicky due to invisible tooltip interference

--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,7 @@ input {
   transform: translateY(1.5em);
 
   opacity: 0;
+  pointer-events: none;
 }
 
 .color-value:hover + .tooltip {
